objects/Motosnap_Callout__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Values to perform Salesforce to Motosnap callouts</description>
    <fields>
        <fullName>Send_Error_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check if you want an email to be sent to Developers if an error occurred during the HttpResponse.</inlineHelpText>
        <label>Send Error Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>apikey__c</fullName>
        <description>The setHeader for the Motosnap HttpRequest</description>
        <label>apikey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>callOutURL__c</fullName>
        <description>The setEndpoint used by the Motosnap HttpRequest</description>
        <label>callOutURL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Motosnap Callout</label>
</CustomObject>